--- a/src/Resources/app/administration/src/module/sw-product/view/sw-product-detail-mollie/sw-product-detail-mollie.scss
+++ b/src/Resources/app/administration/src/module/sw-product/view/sw-product-detail-mollie/sw-product-detail-mollie.scss
@@ -1,5 +1,17 @@
 @import "~scss/variables";
 
+.sw-product-detail-mollie-subscription-form {
+    &__subscriptionInterval,
+    &__subscriptionRepetition {
+        display: inline-flex;
+
+        .subscription-form-field {
+            width: 49%;
+            margin-right: 10px;
+        }
+    }
+}
+
 .sw-product-detail-mollie-subscription-form__container,
 .sw-product-detail-mollie-vouchers-form__container {
     .sw-product-detail-mollie-subscription__description-title,
