--- a/src/Resources/views/storefront/component/delivery-information.html.twig
+++ b/src/Resources/views/storefront/component/delivery-information.html.twig
@@ -3,7 +3,7 @@
 {% block component_delivery_information %}
     {{ parent() }}
 
-    {% if(config('MolliePayments.config.enableSubscriptions') and page.product.customFields.mollie_subscription.mollie_subscription_product) %}
+    {% if(config('MolliePayments.config.enableSubscriptions') and config('MolliePayments.config.showSubscriptionLabel') and page.product.customFields.mollie_subscription.mollie_subscription_product) %}
         <div class="product-mollie-subscriptions-information">
             <p class="delivery-information mollie-subscriptions">
                 <span class="delivery-status-indicator bg-info"></span>
