--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -157,7 +157,7 @@
                 refundAmount : currency(refundAmount, order.currency.shortName),
             }) }}
             <template #actions>
-                <sw-button @click="setRefundAmount(orderRefundAmount)">
+                <sw-button @click="setRefundAmount(orderRefundAmount)" v-if="orderMaximum > 0">
                     {{ $tc('mollie-payments.modals.refund.warning.refundAmountButton', 0, {
                         amount: currency(orderRefundAmount, order.currency.shortName)
                     }) }}
@@ -172,13 +172,13 @@
                 refundAmount : currency(refundAmount, order.currency.shortName),
             }) }}
             <template #actions>
-                <sw-button @click="setRefundAmount(orderRefundAmount)">
+                <sw-button @click="setRefundAmount(orderRefundAmount)" v-if="orderMaximum > 0">
                     {{ $tc('mollie-payments.modals.refund.warning.refundAmountButton', 0, {
                         amount: currency(orderRefundAmount, order.currency.shortName)
                     }) }}
                 </sw-button>
                 <sw-button v-if="remainingAmount > orderRefundAmount"
-                           @click="setRefundAmount(remainingAmount)">
+                           @click="setRefundAmount(remainingAmount)" v-if="remainingAmount > 0">
                     {{ $tc('mollie-payments.modals.refund.warning.refundAmountButton', 0, {
                         amount: currency(remainingAmount, order.currency.shortName)
                     }) }}
