Fix some general code smells

--- a/src/Resources/views/storefront/component/product/card/action.html.twig
+++ b/src/Resources/views/storefront/component/product/card/action.html.twig
@@ -21,7 +21,7 @@
 
                 {% if productPrice > 0 %}
                     <div class="mb-2 d-none only-support-apple-pay">
-                        {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' %}
+                        {% sw_include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' %}
                     </div>
                 {% endif %}
 
